# circom-witnesscalc-android

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: publish.yml
app/: build.gradle.kts
app/src/androidTest/java/io/iden3/circomwitnesscalc_example/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/iden3/circomwitnesscalc_example/: MainActivity.kt  UriUtils.java
app/src/main/java/io/iden3/circomwitnesscalc_example/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/io/iden3/circomwitnesscalc_example/: ExampleUnitTest.kt
circomwitnesscalc/: build.gradle.kts
circomwitnesscalc/src/androidTest/java/io/iden3/circomwitnesscalc/: ExampleInstrumentedTest.kt
circomwitnesscalc/src/jniLibs/: libcircom_witnesscalc.h
circomwitnesscalc/src/main/: AndroidManifest.xml
circomwitnesscalc/src/main/cpp/: CMakeLists.txt  circomwitnesscalc_module.cpp  circomwitnesscalc_module.h
circomwitnesscalc/src/main/java/io/iden3/circomwitnesscalc/: WitnessCalc.kt
circomwitnesscalc/src/main/res/values/: strings.xml  themes.xml
circomwitnesscalc/src/main/res/values-night/: themes.xml
circomwitnesscalc/src/test/java/io/iden3/circomwitnesscalc/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
